# random-data

./: Cargo.toml  README.md  build.rs
.github/workflows/: build.yml  clippy.yml  coverage.yml  docs.yml  fmt.yml  rustdoc.yml  rustfmt.yml  tarpaulin.yml  test.yml
src/: data.rs  generator.rs  lib.rs  primitives.rs  strings.rs
src/data/: computational.rs  raw.rs
src/data/computational/: address.rs  colour.rs  computer.rs  finance.rs  isbn.rs  people.rs  personal.rs  primitive.rs  primitives.rs  text.rs
src/data/raw/: animals.rs  computer.rs  currency.rs  education.rs  fauna.rs  france.rs  internet.rs  mythology.rs  name.rs  names.rs  people.rs  programming.rs  sky_space.rs  sport.rs  uk.rs  university.rs  us.rs  weather.rs  words.rs  work.rs  world.rs
src/raw/: art.rs  companies.rs  currency.rs  date.rs  history.rs  mod.rs  mythology.rs  science.rs  space.rs  sport.rs  time.rs  university.rs  us.rs  world.rs
src/strings/: animals.rs  art.rs  colours.rs  companies.rs  datetime.rs  france.rs  history.rs  internet.rs  names.rs  people.rs  programming.rs  science.rs  space.rs  sport.rs  uk.rs  university.rs  us.rs  weather.rs  world.rs
tests/: all.rs
