[package]
name = "random-data"
version = "0.1.0"
edition = "2024"
description = "A library tool to generate random data of any kind."
license = "MIT or Apache-2.0"
repository = "https://github.com/t-webber/fake-data"
authors = ["Tom Webber <t.c.w.webber@gmail.com>"]
readme = "README.md"
keywords = [
  "random",
  "data-generation",
  "faker",
  "names",
  "companies",
  "continents",
  "countries",
  "booleans",
  "numbers",
]
categories = ["data-generation", "randomness", "utilities"]

[dependencies]
rand = "0.9.2"

[features]
default = [
  "minimal",
  "animals",
  "art",
  "colours",
  "currencies",
  "datetime",
  "education",
  "france",
  "history",
  "internet",
  "names",
  "people",
  "personal",
  "computer",
  "address",
  "science",
  "sky_space",
  "uk",
  "us",
  "text",
  "work",
  "world",
]
animals = []
art = []
colours = []
currencies = []
datetime = []
education = []
france = []
history = []
internet = []
names = []
people = []
computer = ["text"]
science = []
sky_space = []
uk = []
us = []
text = []
work = []
world = []
minimal = []
finance = ["world"]
address = ["people"]
personal = ["names", "computer"]
