[package]
name = "random-data"
version = "0.1.1"
edition = "2024"
description = "A library tool to generate random data of any kind."
license = "MIT OR Apache-2.0"
repository = "https://github.com/t-webber/fake-data"
authors = ["Tom Webber <t.c.w.webber@gmail.com>"]
readme = "README.md"
keywords = ["random", "data-generation", "fake-data", "fake"]
categories = ["config", "database", "development-tools"]

[dependencies]
rand = "0.9.2"
rand_chacha = "0.9.0"

[features]
default = [
  "address",
  "animals",
  "art",
  "colours",
  "computer",
  "currencies",
  "datetime",
  "education",
  "finance",
  "france",
  "history",
  "internet",
  "minimal",
  "names",
  "people",
  "personal",
  "science",
  "sky_space",
  "text",
  "uk",
  "us",
  "work",
  "world",
]
address = ["people", "uk", "france", "world"]
animals = []
art = []
colours = []
computer = ["text"]
currencies = []
datetime = []
education = []
finance = ["world"]
france = []
history = []
internet = []
minimal = []
names = []
people = []
personal = ["names", "internet"]
science = []
sky_space = []
text = []
uk = []
us = []
work = []
world = []
